added teamlinks on transfermarkt

--- a/scrape/TransfermarktScrape.ipynb
+++ b/scrape/TransfermarktScrape.ipynb
@@ -87,9 +87,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  del sys.path[0]\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  from ipykernel import kernelapp as app\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  app.launch_new_instance()\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/david/Documents/envs/fuzz/lib/python3.7/site-packages/ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(pd.read_html(str(soup.find_all('table',{\"class\":\"items\"})[0]))[0])\n",
     "new_columns = df.columns[2:]\n",
@@ -101,58 +162,58 @@
     "df = df.drop(df.columns[-1], 1)\n",
     "df.columns = new_columns\n",
     "df['ø age'] = df['ø age']/10\n",
+    "\n",
+    "df['teamlink'] = ''\n",
+    "df.loc[df['name']=='BSC Young Boys']['teamlink'] = \"https://www.transfermarkt.com/bsc-young-boys/kader/verein/452/\"\n",
+    "df.loc[df['name']=='FC Basel 1893']['teamlink'] = \"https://www.transfermarkt.com/fc-basel-1893/startseite/verein/26/\"\n",
+    "df.loc[df['name']=='FC Zürich']['teamlink'] = \"https://www.transfermarkt.com/fc-zurich/startseite/verein/260/\"\n",
+    "df.loc[df['name']=='FC Luzern']['teamlink'] = \"https://www.transfermarkt.com/fc-luzern/startseite/verein/434/\"\n",
+    "df.loc[df['name']=='FC Sion']['teamlink'] = \"https://www.transfermarkt.com/fc-sion/startseite/verein/321/\"\n",
+    "df.loc[df['name']=='FC Lugano']['teamlink'] = \"https://www.transfermarkt.com/fc-lugano/startseite/verein/2790/\"\n",
+    "df.loc[df['name']=='FC Thun']['teamlink'] = \"https://www.transfermarkt.com/fc-thun/startseite/verein/938/\"\n",
+    "df.loc[df['name']=='FC St. Gallen 1879']['teamlink'] = \"https://www.transfermarkt.com/fc-st-gallen/startseite/verein/257/\"\n",
+    "df.loc[df['name']=='Servette FC']['teamlink'] = \"https://www.transfermarkt.com/servette-fc/startseite/verein/61/\"\n",
+    "df.loc[df['name']=='Neuchâtel Xamax FCS']['teamlink'] = \"https://www.transfermarkt.com/neuchatel-xamax-fcs/startseite/verein/9084/\"\n",
+    "\n",
     "df.to_csv('../data/teams.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     25.2\n",
-       "1     23.9\n",
-       "2     24.9\n",
-       "3     24.6\n",
-       "4     24.1\n",
-       "5     25.9\n",
-       "6     24.9\n",
-       "7     23.6\n",
-       "8     25.6\n",
-       "9     26.4\n",
-       "10    27.7\n",
-       "Name: ø age, dtype: float64"
+       "0          BSC Young Boys\n",
+       "1           FC Basel 1893\n",
+       "2               FC Zürich\n",
+       "3               FC Luzern\n",
+       "4                 FC Sion\n",
+       "5               FC Lugano\n",
+       "6                 FC Thun\n",
+       "7      FC St. Gallen 1879\n",
+       "8             Servette FC\n",
+       "9     Neuchâtel Xamax FCS\n",
+       "10                    NaN\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Club.1', 'name', 'name.1', 'Squad', 'ø age', 'Players playing abroad',\n",
-       "       'Total market value', 'ø market value', 'Total MV', 'ø MV'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df['name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scrape Players"
    ]
   },
   {
@@ -592,54 +653,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 327,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "player_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 211,
    "metadata": {},
    "outputs": [
@@ -711,34 +724,6 @@
    ],
    "source": [
     "player_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<td class=\"zentriert rueckennummer bg_Torwart\" title=\"Goalkeeper\"><div class=\"rn_nummer\">26</div></td>,\n",
-       " <td class=\"posrela\" title=\"\"><table class=\"inline-table\" title=\"\"><tr><td class=\"\" rowspan=\"2\"><a href=\"#\"><img alt=\"David von Ballmoos\" class=\"bilderrahmen-fixed\" src=\"https://tmssl.akamaized.net//images/portrait/small/203124-1533134983.jpg?lm=1533134993\" title=\"David von Ballmoos\"/></a></td><td class=\"hauptlink\"><div class=\"di nowrap\"><span class=\"hide-for-small\"><a class=\"spielprofil_tooltip\" href=\"/david-von-ballmoos/profil/spieler/203124\" id=\"203124\" title=\"David von Ballmoos\">David von Ballmoos</a></span></div><div class=\"di nowrap\"><span class=\"show-for-small\"><a class=\"spielprofil_tooltip\" href=\"/david-von-ballmoos/profil/spieler/203124\" id=\"203124\" title=\"David von Ballmoos\">D. von Ballmoos</a></span></div></td></tr><tr><td>Goalkeeper</td></tr></table></td>,\n",
-       " <td class=\"\" rowspan=\"2\"><a href=\"#\"><img alt=\"David von Ballmoos\" class=\"bilderrahmen-fixed\" src=\"https://tmssl.akamaized.net//images/portrait/small/203124-1533134983.jpg?lm=1533134993\" title=\"David von Ballmoos\"/></a></td>,\n",
-       " <td class=\"hauptlink\"><div class=\"di nowrap\"><span class=\"hide-for-small\"><a class=\"spielprofil_tooltip\" href=\"/david-von-ballmoos/profil/spieler/203124\" id=\"203124\" title=\"David von Ballmoos\">David von Ballmoos</a></span></div><div class=\"di nowrap\"><span class=\"show-for-small\"><a class=\"spielprofil_tooltip\" href=\"/david-von-ballmoos/profil/spieler/203124\" id=\"203124\" title=\"David von Ballmoos\">D. von Ballmoos</a></span></div></td>,\n",
-       " <td>Goalkeeper</td>,\n",
-       " <td class=\"zentriert\">Dec 30, 1994 (24)</td>,\n",
-       " <td class=\"zentriert\"><img alt=\"Switzerland\" class=\"flaggenrahmen\" src=\"https://tmssl.akamaized.net//images/flagge/verysmall/148.png?lm=1520611569\" title=\"Switzerland\"/></td>,\n",
-       " <td class=\"zentriert\">30.06.2022</td>,\n",
-       " <td class=\"rechts hauptlink\">3,50 mil. € <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: 2,50 mil. €\"> </span></td>]"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "player_row[:][1].find_all(\"td\")"
    ]
   },
   {
