dream_scores parsed to readable date

--- a/scrape/DreamTeamScrape.ipynb
+++ b/scrape/DreamTeamScrape.ipynb
@@ -1530,7 +1530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_player_scores = df_player_scores[(df_player_scores['week'] != 18)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
