handled NaN for no insta-account correctly

--- a/scrape/SocialMediaScrape.ipynb
+++ b/scrape/SocialMediaScrape.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "      <th>14</th>\n",
        "      <td>Miralem Sulejmani</td>\n",
        "      <td>miralems</td>\n",
-       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>miralem.sulejmani.1042</td>\n",
        "      <td>865</td>\n",
        "    </tr>\n",
@@ -284,7 +284,7 @@
        "11        Esteban Petignat              NaN   estebanpetignat6   \n",
        "12        Marvin Spielmann              NaN       mspielmann33   \n",
        "13          Vincent Sierro              NaN     vincent_sierro   \n",
-       "14       Miralem Sulejmani         miralems                  -   \n",
+       "14       Miralem Sulejmani         miralems                NaN   \n",
        "15        Gianluca Gaudino              NaN   gaudino.gianluca   \n",
        "16  Nicolas Moumi Ngamaleu              NaN      nm.ngamaleu13   \n",
        "17     Christian Fassnacht              NaN        fassnacht16   \n",
@@ -324,7 +324,7 @@
        "24         guillaumehoarauofficiel       780  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,28 +386,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch_insta_follower_count(username):\n",
-    "    try:\n",
-    "        insta_url = f'https://www.instagram.com/{username}/?__a=1'\n",
-    "        resp_insta = requests.get(url=insta_url)\n",
-    "        data = resp_insta.json()\n",
-    "        follower_count = data['graphql']['user']['edge_followed_by']['count']\n",
-    "        return follower_count\n",
+    "    try:        \n",
+    "        if pd.notnull(username):\n",
+    "            insta_url = f'https://www.instagram.com/{username}/?__a=1'\n",
+    "            resp_insta = requests.get(url=insta_url)\n",
+    "            data = resp_insta.json()\n",
+    "            follower_count = data['graphql']['user']['edge_followed_by']['count']\n",
+    "            return follower_count\n",
+    "        else:\n",
+    "            return 0\n",
     "    except:\n",
     "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_social_media['insta_followers'] = df_social_media['instagram'].apply(lambda x: fetch_insta_follower_count(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>twitter</th>\n",
+       "      <th>instagram</th>\n",
+       "      <th>facebook</th>\n",
+       "      <th>dream_id</th>\n",
+       "      <th>twitter_followers</th>\n",
+       "      <th>insta_followers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Marco Wölfli</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>woelfli_1</td>\n",
+       "      <td>marcowoelfli</td>\n",
+       "      <td>278</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>David Von Ballmoos</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>davidvonballmoos</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>517</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dario Marzino</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>dariomarzino</td>\n",
+       "      <td>dario.marzino</td>\n",
+       "      <td>788</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Frederik Sörensen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>frederiksorensen4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1379</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mohamed Ali Camara</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>camara_mhdali4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cedric Zesiger</td>\n",
+       "      <td>ZesigerCedric33</td>\n",
+       "      <td>zesiger5</td>\n",
+       "      <td>cedric.zesiger.7</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>149</td>\n",
+       "      <td>4597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Nicolas Bürgy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nbuergy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>770</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Ulisses Garcia</td>\n",
+       "      <td>ulisses_garcia3</td>\n",
+       "      <td>ulissesgarcia20</td>\n",
+       "      <td>ulissesgarciaofficielle</td>\n",
+       "      <td>694</td>\n",
+       "      <td>1331</td>\n",
+       "      <td>15785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Saidy Janko</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>saidyjanko22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1352</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Fabian Lustenberger</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lusti28</td>\n",
+       "      <td>fabian.lustenberger</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Jordan Lotomba</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>j_lotomba</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>990</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Esteban Petignat</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>estebanpetignat6</td>\n",
+       "      <td>esteban.petignat</td>\n",
+       "      <td>1306</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Marvin Spielmann</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mspielmann33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1051</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Vincent Sierro</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vincent_sierro</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>791</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Miralem Sulejmani</td>\n",
+       "      <td>miralems</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>miralem.sulejmani.1042</td>\n",
+       "      <td>865</td>\n",
+       "      <td>24684</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Gianluca Gaudino</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>gaudino.gianluca</td>\n",
+       "      <td>GianlucaGaudino.Official</td>\n",
+       "      <td>925</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Nicolas Moumi Ngamaleu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nm.ngamaleu13</td>\n",
+       "      <td>Moumi-Ngamaleu-996084077135247</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Christian Fassnacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fassnacht16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>972</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Michel Aebischer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>michel.aebischer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Sandro Lauper</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sml.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>972</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Christopher Martins</td>\n",
+       "      <td>chrismartins_25</td>\n",
+       "      <td>chrismartins___</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>896</td>\n",
+       "      <td>4147</td>\n",
+       "      <td>11326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Roger Assalé</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1042</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Jean Pierre Nsame</td>\n",
+       "      <td>nsa33ns</td>\n",
+       "      <td>nsame18</td>\n",
+       "      <td>JeanPierreNSame</td>\n",
+       "      <td>1112</td>\n",
+       "      <td>1034</td>\n",
+       "      <td>6708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Felix Mambimbi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>felixmambimbi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Guillaume Hoarau</td>\n",
+       "      <td>hoarauguillaume</td>\n",
+       "      <td>hoarauguillaume</td>\n",
+       "      <td>guillaumehoarauofficiel</td>\n",
+       "      <td>780</td>\n",
+       "      <td>42990</td>\n",
+       "      <td>289031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    player          twitter          instagram  \\\n",
+       "0             Marco Wölfli              NaN          woelfli_1   \n",
+       "1       David Von Ballmoos              NaN   davidvonballmoos   \n",
+       "2            Dario Marzino              NaN       dariomarzino   \n",
+       "3        Frederik Sörensen              NaN  frederiksorensen4   \n",
+       "4       Mohamed Ali Camara              NaN     camara_mhdali4   \n",
+       "5           Cedric Zesiger  ZesigerCedric33           zesiger5   \n",
+       "6            Nicolas Bürgy              NaN            nbuergy   \n",
+       "7           Ulisses Garcia  ulisses_garcia3    ulissesgarcia20   \n",
+       "8              Saidy Janko              NaN       saidyjanko22   \n",
+       "9      Fabian Lustenberger              NaN            lusti28   \n",
+       "10          Jordan Lotomba              NaN          j_lotomba   \n",
+       "11        Esteban Petignat              NaN   estebanpetignat6   \n",
+       "12        Marvin Spielmann              NaN       mspielmann33   \n",
+       "13          Vincent Sierro              NaN     vincent_sierro   \n",
+       "14       Miralem Sulejmani         miralems                NaN   \n",
+       "15        Gianluca Gaudino              NaN   gaudino.gianluca   \n",
+       "16  Nicolas Moumi Ngamaleu              NaN      nm.ngamaleu13   \n",
+       "17     Christian Fassnacht              NaN        fassnacht16   \n",
+       "18        Michel Aebischer              NaN   michel.aebischer   \n",
+       "19           Sandro Lauper              NaN             sml.30   \n",
+       "20     Christopher Martins  chrismartins_25    chrismartins___   \n",
+       "21            Roger Assalé              NaN                NaN   \n",
+       "22       Jean Pierre Nsame          nsa33ns            nsame18   \n",
+       "23          Felix Mambimbi              NaN      felixmambimbi   \n",
+       "24        Guillaume Hoarau  hoarauguillaume    hoarauguillaume   \n",
+       "\n",
+       "                          facebook  dream_id  twitter_followers  \\\n",
+       "0                     marcowoelfli       278                  0   \n",
+       "1                              NaN       517                  0   \n",
+       "2                    dario.marzino       788                  0   \n",
+       "3                              NaN      1379                  0   \n",
+       "4                              NaN      1218                  0   \n",
+       "5                 cedric.zesiger.7      1013                149   \n",
+       "6                              NaN       770                  0   \n",
+       "7          ulissesgarciaofficielle       694               1331   \n",
+       "8                              NaN      1352                  0   \n",
+       "9              fabian.lustenberger      1353                  0   \n",
+       "10                             NaN       990                  0   \n",
+       "11                esteban.petignat      1306                  0   \n",
+       "12                             NaN      1051                  0   \n",
+       "13                             NaN       791                  0   \n",
+       "14          miralem.sulejmani.1042       865              24684   \n",
+       "15        GianlucaGaudino.Official       925                  0   \n",
+       "16  Moumi-Ngamaleu-996084077135247      1130                  0   \n",
+       "17                             NaN       972                  0   \n",
+       "18                             NaN      1017                  0   \n",
+       "19                             NaN       972                  0   \n",
+       "20                             NaN       896               4147   \n",
+       "21                             NaN      1042                  0   \n",
+       "22                 JeanPierreNSame      1112               1034   \n",
+       "23                             NaN      1300                  0   \n",
+       "24         guillaumehoarauofficiel       780              42990   \n",
+       "\n",
+       "    insta_followers  \n",
+       "0             11306  \n",
+       "1             10469  \n",
+       "2              1765  \n",
+       "3             21033  \n",
+       "4             12966  \n",
+       "5              4597  \n",
+       "6              2906  \n",
+       "7             15785  \n",
+       "8             59359  \n",
+       "9             24232  \n",
+       "10             4528  \n",
+       "11             1389  \n",
+       "12             5242  \n",
+       "13             8078  \n",
+       "14                0  \n",
+       "15            26576  \n",
+       "16            31252  \n",
+       "17            12936  \n",
+       "18             5654  \n",
+       "19             5313  \n",
+       "20            11326  \n",
+       "21                0  \n",
+       "22             6708  \n",
+       "23             4723  \n",
+       "24           289031  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_social_media"
    ]
   },
   {
