--- a/scrape/InstaLoader.ipynb
+++ b/scrape/InstaLoader.ipynb
@@ -643,11 +643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_social_media.to_csv( '../data/social_media_followers.csv', index=False)"
+    "df_insta_timeseries.to_csv( '../data/df_insta_timeseries.csv', index=False)"
    ]
   },
   {
